--- a/src/components/Trailer/Trailer.css
+++ b/src/components/Trailer/Trailer.css
@@ -1,7 +1,7 @@
 .trailer {
   position: fixed;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 10000;
   display: flex;
@@ -41,4 +41,11 @@
   font-size: 15px;
   font-weight: bold;
   color: var(--fourth-color);
+}
+
+@media screen and (max-width: 425px) {
+  .trailer_container {
+    width: 380px;
+    height: 280px;
+  }
 }
