--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,5 @@
 :root {
-  --main-bg: #f1faee;
+  --main-bg: #e9ecef;
   --primary-color: #1d3557;
   --secondary-color: #e63946;
   --third-color: #a8dadc;
